图片优化，大幅度改版

--- a/about.html
+++ b/about.html
@@ -2,14 +2,14 @@
 layout: page
 title: "About"
 description: "Hey, this is LZP."
-header-img: "img/post-bg-rwd.jpg"
+header-img: "img/bg-it4.jpg"
 ---
 
 <!-- Language Selector -->
-<!-- <select class="sel-lang" onchange= "onLanChange(this.options[this.options.selectedIndex].value)">
+<select class="sel-lang" onchange= "onLanChange(this.options[this.options.selectedIndex].value)">
     <option value="0" selected> 中文 Chinese </option>
     <option value="1"> 英文 English </option>
-</select>  -->
+</select>
 
 <!-- Chinese Version -->
 <div class="zh post-container">
@@ -38,7 +38,7 @@ header-img: "img/post-bg-rwd.jpg"
 </div>
 
 <!-- English Version -->
-<!-- <div class="en post-container">
+<div class="en post-container">
     <blockquote><p>Yet another Developer. <br>
     Yet another Life-long Student.</p></blockquote>
 
@@ -57,10 +57,10 @@ header-img: "img/post-bg-rwd.jpg"
         <li><a href="https://tongji.baidu.com">百度统计</a></li> 
         <li><a href="https://analytics.google.com/analytics">Google Analytics</a></li>
     </ul>
-</div> -->
+</div>
 
 <!-- Handle Language Change -->
-<!-- <script type="text/javascript">
+<script type="text/javascript">
     // get nodes
     var $zh = document.querySelector(".zh");
     var $en = document.querySelector(".en");
@@ -97,7 +97,7 @@ header-img: "img/post-bg-rwd.jpg"
 
     // init
     _render();
-</script> -->
+</script>
 
 
 <!-- Gitalk 评论 start  -->
